--- a/Contact.html
+++ b/Contact.html
@@ -2,34 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zawadi Esube | Get to Know Me</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet">
-    <link href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons">
+    <meta name="viewport" content="width=device-width", initial-scale="1.o">
+    <title>Zawadi Esube | Get in Touch</title>
+    <link rel="stylesheet" href="Style.CSS">
+    <link href="link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet">
+    <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
         
 </head>
 <body>
 
-     <header>
-        <div class="navbar-box">
-            <nav class="navbar">
+     <div class="header">
+        <div class="container">
+            <div class="navbar">
                 <div class="logo">
-                    <a href="index.html">
-                        <img src="AboutMeLogo.png" width="125px" alt="Logo">
-                    </a>
+                     <a href="index.html"><img src="AboutMeLogo.png" width="125px"></a>
                 </div>
-                <ul id="MenuItems">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="aboutme.html">About Me</a></li>
-                    <li><a href="education.html">Education</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
+                <nav>
+                    <ul id="MenuItems">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="aboutme.html">About Me</a></li>
+                        <li><a href="education.html">Education</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
-    </header>
-    
-    <!-----------contact-------->
+    </div>
+
+<!-----------contact-------->
     <div class="contact-container">
         <form action="" class="contact-left">
             <div class="contact-left-title">
@@ -42,36 +42,31 @@
             <button type="submit">Submit <img src="arrow-right.png" alt=""></button>
         </form>
     </div>
+
+
+
+
 <!----------footer------->
-    <div class="footer-box">
-        <footer>
-            <div class="container">
-                <div class="row">
-                    <div class="col-4">
-                        <img src="AboutMeLogo.png" width="125px">
-                    </div>
-                    <div class="col-4">
-                        <h3>You're Amazing!</h3>
-                    </div>
-                    <div class="col-4">
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <img src="AboutMeWhiteLogo.png" width="125px">
+                </div>
+                <div class="col-4">
+                    <h3>You're Amazing!</h3>
+                </div>
+                <div class="col-4">
                     <h3>Find Me Here</h3>
-                        <ul class="social-links">
-                            <li>
-                                <a href="https://instagram.com/c_ad_eau_/" target="_blank">
-                                    <i class="fab fa-instagram"></i> Instagram
-                                </a>
-                            </li>
-                             <li>
-                                <a href="https://linkedin.com/in/zawadi-esube" target="_blank">
-                                    <i class="fab fa-linkedin"></i> LinkedIn
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
+                    <ul>
+                        <li>Linkden</li>
+
+                        <li>Instagram</li>
+                    </ul>
                 </div>
             </div>
-        </footer>
-
+        </div>
     </div>
+
 </body>
 </html>
