--- a/index.html
+++ b/index.html
@@ -2,78 +2,125 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width", initial-scale="1.o">
+    <meta name="viewport" content="width=device-width, initial-scale=1.o">
     <title>Zawadi Esube | Get to Know Me</title>
-    <link rel="stylesheet" href="Style.CSS">
-    <link href="link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet">
-    <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet">
+    <link href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons">
         
 </head>
 <body>
 
-     <div class="header">
-        <div class="container">
-            <div class="navbar">
+     <header>
+        <div class="navbar-box">
+            <nav class="navbar">
                 <div class="logo">
-                     <a href="index.html"><img src="AboutMeLogo.png" width="125px"></a>
+                    <a href="index.html">
+                        <img src="AboutMeLogo.png" width="125px" alt="Logo">
+                    </a>
                 </div>
-                <nav>
-                    <ul id="MenuItems">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="aboutme.html">About Me</a></li>
-                        <li><a href="education.html">Education</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-                <div class="row">
-                    <div class="col-1">
-                    <h1>The Gift Within</h1>
-                    <br>
-                    <p>Allow me to introduce myself: a first-year student at Ivy Tech Community College,<br>
-                    diving into the exciting world of software development.<br>
-                    This journey is not just about mastering technical skills,<br>
-                    but also about personal growth and self-discovery.</p>
-                    <br>
-                    <p>In addition to my studies, I find joy in worshiping Christ,<br>
-                    spending time with loved ones, and pursuing hobbies like cooking,<br>
-                    music, and watching YouTube vlogs.<br>
-                    Join me as I explore the endless possibilities that await in this thrilling adventure!<br>
-                    First-year student at Ivy Tech Community College,<br>
-                    diving into the exciting world of technology.<br>
-                    This journey is not just about mastering technical skills,<br>
-                    but also about personal growth and self-discovery.</p>
-                    <a href="AboutMe.html" class="btn">About Me &#8594</a>
+                <ul id="MenuItems">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="aboutme.html">About Me</a></li>
+                    <li><a href="education.html">Education</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="row">
+            <div class="col-1">
+                <h1>The Gift Within</h1>
+                <br>
+                <p>Welcome! My name is Zawadi Esube, a dedicated student at Ivy Tech Community College, 
+                <br>currently pursuing my Associate of Applied Science degree in Software Development. 
+                <br>Join me on my journey as I explore the dynamic world of technology and software creation!
+                </p>
 
-                </div>
-                <div class="col-1">
-                    <img src="CartoonOfMe.2.png">
-                </div>
+            </div>
+            <div class="col-1">
+                <img src="CartoonOfMe.2.png">
+            </div>
+        </div>
+    </header>
+<!----------about me categories-------->
+    <div class="small-container">
+        <h2 class="title">About Me</h2>
+        <div class="row">
+            <div class="col-3">
+                <img src="Zawa.jpg" alt="Portait of Zawadi Esube" width="300px">
+            </div>
+            <div class="col-3">
+                <h5>Who Am I?</h5>
+                <br>
+                <p>Welcome! Join me as I share a little about myself!</p>
+                <a href="AboutMe.html" class="btn">About Me &#8594</a>
+
+
             </div>
         </div>
     </div>
+<!-----------education categories---------->
+    <div class="small-container">
+        <h2 class="title">Education</h2>
+        <div class="row">
+            <div class="col-2">
+                <img src="GraduationPhoto1.jpg" width="300px">
+                <br> 
+                <h4>Class of 2024</h4>
+            </div>
+            <p>Join me as I share a brief overview of my educational journey!</p>
+            <a href="Education.html" class="btn">Education Background &#8594</a>
+            <div class="col-2">
+                <img src="IvyTechmerch.jpeg" width="300px">
+                <br>
+                <h4>One Step towards my Goals</h4>
+            </div>
 
+        </div>
+    </div>
+<!-----------contact-------->
+    <div class="contact-container">
+        <form action="" class="contact-left">
+            <div class="contact-left-title">
+                <h2>Get in touch</h2>
+                <hr>
+            </div>
+            <input type="text" name="name" placeholder="Your Name" class="contact-inputs" required>
+            <input type="email" name="email" placeholder="Your Email" class="contact-inputs" required>
+            <textarea name="message" placeholder="Your Message" class="contact-inputs" required></textarea>
+            <button type="submit">Submit <img src="arrow-right.png" alt=""></button>
+        </form>
+    </div>
 <!----------footer------->
-    <div class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-4">
-                    <img src="AboutMeWhiteLogo.png" width="125px">
-                </div>
-                <div class="col-4">
-                    <h3>You're Amazing!</h3>
-                </div>
-                <div class="col-4">
+    <div class="footer-box">
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-4">
+                        <img src="AboutMeLogo.png" width="125px">
+                    </div>
+                    <div class="col-4">
+                        <h3>You're Amazing!</h3>
+                    </div>
+                    <div class="col-4">
                     <h3>Find Me Here</h3>
-                    <ul>
-                        <li>Linkden</li>
-
-                        <li>Instagram</li>
-                    </ul>
+                        <ul class="social-links">
+                            <li>
+                                <a href="https://instagram.com/c_ad_eau_/" target="_blank">
+                                    <i class="fab fa-instagram"></i> Instagram
+                                </a>
+                            </li>
+                             <li>
+                                <a href="https://linkedin.com/in/zawadi-esube" target="_blank">
+                                    <i class="fab fa-linkedin"></i> LinkedIn
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
+        </footer>
 
+    </div>
 </body>
 </html>
