--- a/index.html
+++ b/index.html
@@ -2,26 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.o">
     <title>Zawadi Esube | Get to Know Me</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style.CSS">
     <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons">
+        
 </head>
 <body>
 
-    <header>
+     <header>
         <div class="navbar-box">
             <nav class="navbar">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="AboutMeLogo.png" width="125px" alt="Site Logo" />
+                        <img src="AboutMeLogo.png" width="125px" alt="Logo">
                     </a>
                 </div>
                 <ul id="MenuItems">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="aboutme.html">About Me</a></li>
-                    <li><a href="education.html">Education</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="AboutMe.html">About Me</a></li>
+                    <li><a href="Education.html">Education</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -29,88 +32,87 @@
             <div class="col-1">
                 <h1>The Gift Within</h1>
                 <br>
-                <p>
-                    Welcome! My name is Zawadi Esube, a dedicated student at Ivy Tech Community College, <br>
-                    currently pursuing my Associate of Applied Science degree in Software Development. <br>
-                    Join me on my journey as I explore the dynamic world of technology and software creation!
+                <p>Welcome! My name is Zawadi Esube, a dedicated student at Ivy Tech Community College, 
+                <br>currently pursuing my Associate of Applied Science degree in Software Development. 
+                <br>Join me on my journey as I explore the dynamic world of technology and software creation!
                 </p>
+
             </div>
             <div class="col-1">
-                <img src="CartoonOfMe.2.png" alt="Cartoon of Zawadi Esube" />
+                <img src="CartoonOfMe.2.png">
             </div>
         </div>
     </header>
-
-    <!-- About Me Section -->
+<!----------about me categories-------->
     <div class="small-container">
         <h2 class="title">About Me</h2>
         <div class="row">
             <div class="col-3">
-                <img src="Zawa.jpg" alt="Portrait of Zawadi Esube" width="300px" />
+                <img src="Zawa.jpg" alt="Portait of Zawadi Esube" width="300px">
             </div>
             <div class="col-3">
                 <h5>Who Am I?</h5>
                 <br>
                 <p>Welcome! Join me as I share a little about myself!</p>
-                <a href="aboutme.html" class="btn">About Me &#8594;</a>
+                <a href="AboutMe.html" class="btn">About Me &#8594</a>
+
+
             </div>
         </div>
     </div>
-
-    <!-- Education Section -->
+<!-----------education categories---------->
     <div class="small-container">
         <h2 class="title">Education</h2>
         <div class="row">
             <div class="col-2">
-                <img src="GraduationPhoto1.jpg" alt="Graduation Photo" width="300px" />
-                <br>
+                <img src="GraduationPhoto1.jpg" width="300px">
+                <br> 
                 <h4>Class of 2024</h4>
             </div>
             <p>Join me as I share a brief overview of my educational journey!</p>
-            <a href="education.html" class="btn">Education Background &#8594;</a>
+            <a href="Education.html" class="btn">Education Background &#8594</a>
             <div class="col-2">
-                <img src="IvyTechmerch.jpeg" alt="Ivy Tech Merchandise" width="300px" />
+                <img src="IvyTechmerch.jpeg" width="300px">
                 <br>
-                <h4>One Step Towards My Goals</h4>
+                <h4>One Step towards my Goals</h4>
             </div>
+
         </div>
     </div>
-
-    <!-- Contact Section -->
+<!-----------contact-------->
     <div class="contact-container">
         <form action="" class="contact-left">
             <div class="contact-left-title">
-                <h2>Get in Touch</h2>
+                <h2>Get in touch</h2>
                 <hr>
             </div>
-            <input type="text" name="name" placeholder="Your Name" class="contact-inputs" required />
-            <input type="email" name="email" placeholder="Your Email" class="contact-inputs" required />
+            <input type="text" name="name" placeholder="Your Name" class="contact-inputs" required>
+            <input type="email" name="email" placeholder="Your Email" class="contact-inputs" required>
             <textarea name="message" placeholder="Your Message" class="contact-inputs" required></textarea>
-            <button type="submit">Submit <img src="arrow-right.png" alt="Submit Arrow" /></button>
+            <button type="submit">Submit <img src="arrow-right.png" alt=""></button>
         </form>
     </div>
-
-    <!-- Footer -->
+<!----------footer------->
     <div class="footer-box">
         <footer>
             <div class="container">
                 <div class="row">
                     <div class="col-4">
-                        <img src="AboutMeLogo.png" width="125px" alt="Footer Logo" />
+                        <img src="AboutMeLogo.png" width="125px">
                     </div>
                     <div class="col-4">
                         <h3>You're Amazing!</h3>
                     </div>
                     <div class="col-4">
-                        <h3>Find Me Here</h3>
+                    <h3>Find Me Here</h3>
                         <ul class="social-links">
                             <li>
-                                <a href="https://instagram.com/c_ad_eau_/" target="_blank" rel="noopener noreferrer">
+                                <a href="https://instagram.com/c_ad_eau_/" target="_blank">
                                     <i class="fab fa-instagram"></i> Instagram
                                 </a>
                             </li>
-                            <li>
-                                <a href="https://linkedin.com/in/zawadi-esube" target="_blank" rel="noopener noreferrer">
+                             <li>
+                                <a href="https://linkedin.com/in/zawadi-esube" target="_blank">
                                     <i class="fab fa-linkedin"></i> LinkedIn
                                 </a>
                             </li>
@@ -119,7 +121,7 @@
                 </div>
             </div>
         </footer>
-    </div>
 
+    </div>
 </body>
 </html>
