--- a/AboutMe.html
+++ b/AboutMe.html
@@ -2,74 +2,103 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width", initial-scale="1.o">
-    <title>Zawadi Esube | About Me</title>
-    <link rel="stylesheet" href="Style.CSS">
-    <link href="link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet">
-    <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Zawadi Esube | Get to Know Me</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet">
+    <link href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons">
         
 </head>
 <body>
 
-     <div class="header">
-        <div class="container">
-            <div class="navbar">
+     <header>
+        <div class="navbar-box">
+            <nav class="navbar">
                 <div class="logo">
-                     <img src="AboutMeLogo.png" width="125px">
+                    <a href="index.html">
+                        <img src="AboutMeLogo.png" width="125px" alt="Logo">
+                    </a>
                 </div>
-                <nav>
-                    <ul id="MenuItems">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="aboutme.html">About Me</a></li>
-                        <li><a href="education.html">Education</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </nav>
+                <ul id="MenuItems">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="AboutMe.html">About Me</a></li>
+                    <li><a href="Education.html">Education</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
+                </ul>
+            </nav>
         </div>
-    </div>
-
-
-<!----------about me categories-------->
+    </header>
+    <!----------about me categories-------->
     <div class="small-container">
         <h2 class="title">About Me</h2>
         <div class="row">
             <div class="col-3">
-                <img src="Zawa.jpg" width="300px">
-                <a href="Education.html" class="btn">Education Background &#8594</a>
-
+                <img src="Zawa.jpg" alt="Portait of Zawadi Esube" width="300px">
             </div>
             <div class="col-3">
                 <h5>Who Am I?</h5>
                 <br>
-                <p>A little bit about me</p>
+                <p>
+                    Hello, my name is Zawadi Esùbe, and I am a 19-year-old on a journey of self-discovery and personal growth.<br>
+                    I am currently pursuing my associate’s degree at Ivy Tech Community College.<br>
+                    As I navigate this journey, I am exploring the exciting world of technology while developing my personal abilities and technical skills.<br><br>
+
+                     My name can be difficult for many to pronounce, but I’ll help you: it’s Zaa-WA-Diy, E-SÙ-Be.<br>
+                    My first name means “gift,” and while I don’t know much about the meaning of my last name, both names have significantly shaped my identity.<br>
+                    My first name has taught me to cherish every moment as if it were a special gift.<br><br>
+
+                    To understand my last name, we need to explore its origins.<br>
+                    It comes from the Democratic Republic of Congo and is spoken by the Babembe ethnic group.<br>
+                    To me, my last name carries deep meaning because it serves as a reminder of who I am and where I come from, culturally and in terms of my identity.<br><br>
+
+                    Aside from school, I spend half of my time working, while the other portion is dedicated to attending my church choir meetings.<br>
+                    My job is not just any job; even though it may not require professional skills that some people consider essential, it holds significant value for me.<br>
+                    Growing up, I was never a people person, and engaging in conversations with others always felt challenging.<br>
+                    However, since starting my first real job, I’ve learned how to hold conversations, which has been beneficial overall.<br>
+                    These interactions have taught me to appreciate other people’s perspectives and, most importantly, have helped me develop communication skills that will benefit my future career.<br><br>
+
+                    Apart from work, my hobbies include cooking, learning, and spending time on YouTube.<br>
+                    I’m not an outdoors person, but I typically use my YouTube time to learn new things.<br>
+                    Currently, I’m learning to code.<br>
+                    I focus on acquiring skills that will benefit my career or that are valuable for personal development.<br>
+                    Being an indoors person is not a waste of time; rather, it is an opportunity to gain new skills.
+                </p>
+                <a href="index.html" class="btn">Home &#8594</a>
+
             </div>
         </div>
     </div>
-
-
-
 
 <!----------footer------->
-    <div class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-4">
-                    <img src="AboutMeWhiteLogo.png" width="125px">
-                </div>
-                <div class="col-4">
-                    <h3>You're Amazing!</h3>
-                </div>
-                <div class="col-4">
+    <div class="footer-box">
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-4">
+                        <img src="AboutMeLogo.png" width="125px">
+                    </div>
+                    <div class="col-4">
+                        <h3>You're Amazing!</h3>
+                    </div>
+                    <div class="col-4">
                     <h3>Find Me Here</h3>
-                    <ul>
-                        <li>Linkden</li>
-
-                        <li>Instagram</li>
-                    </ul>
+                        <ul class="social-links">
+                            <li>
+                                <a href="https://instagram.com/c_ad_eau_/" target="_blank">
+                                    <i class="fab fa-instagram"></i> Instagram
+                                </a>
+                            </li>
+                             <li>
+                                <a href="https://linkedin.com/in/zawadi-esube" target="_blank">
+                                    <i class="fab fa-linkedin"></i> LinkedIn
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
+        </footer>
 
+    </div>
 </body>
 </html>
