--- a/Education.html
+++ b/Education.html
@@ -2,74 +2,142 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width", initial-scale="1.o">
-    <title>Zawadi Esube | Education</title>
-    <link rel="stylesheet" href="Style.CSS">
-    <link href="link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet">
-    <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Zawadi Esube | Get to Know Me</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet">
+    <link href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons">
         
 </head>
 <body>
 
-     <div class="header">
-        <div class="container">
-            <div class="navbar">
+     <header>
+        <div class="navbar-box">
+            <nav class="navbar">
                 <div class="logo">
-                    <img src="AboutMeLogo.png" width="125px"></a>
+                    <a href="index.html">
+                        <img src="AboutMeLogo.png" width="125px" alt="Logo">
+                    </a>
                 </div>
-                <nav>
-                    <ul id="MenuItems">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="aboutme.html">About Me</a></li>
-                        <li><a href="education.html">Education</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
+                <ul id="MenuItems">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="AboutMe.html">About Me</a></li>
+                    <li><a href="Education.html">Education</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
+                </ul>
+            </nav>
         </div>
-    </div>
+            
+    </header>
 
-<!-----------education categories---------->
+
+    <!-----------education categories---------->
     <div class="small-container">
         <h2 class="title">Education</h2>
-        <div class="row">
+        <div class="education-row">
             <div class="col-2">
                 <img src="GraduationPhoto1.jpg" width="300px">
-               <br> 
-                <h4>Class of 2024</h4>
-            </div>
-            <div class="col-2">
-                <img src="IvyTechmerch.jpeg" width="300px">
-                <br>
-                <h4>One Step towards my Goals</h4>
-            </div>
+            </div> 
+        <div class="col-2">
+            <br>
+            <h5>Class of 2024</h5>
+            <br>
+            <img src="decaturcentral.jpg" width="300px">
         </div>
+        <p>Hi there; I am pleased to share the highlights of my educational journey, which has been both transformative and rewarding.</p>
+        </p>
+
+        <p>
+            I graduated from Decatur Central High School with an Academic and Technical Honors Diploma,<br>
+            achieving a rank in the top 20% of my class of 374 students.
+        </p>
+
+        <p>
+            My academic path began at the Salt Lake Center for Science Education (SLCSE) High School in Utah,<br>
+            where I was fortunate to immerse myself in math and science through hands-on learning experiences and field trips.<br>
+            At SLCSE, I actively participated in the MESA club, which focused on fostering teamwork, critical thinking, and problem-solving skills.<br>
+            A particularly memorable highlight was our visit to the Hansen Dome Theater,<br>
+            where I gained a deeper understanding of the universe through a unique blend of arts, storytelling, and film.
+        </p>
+        <p>
+            In 2021, I transitioned to Indiana, continuing my education at Decatur Central.<br>
+            I successfully completed my sophomore year and quickly moved into my junior year, which presented numerous opportunities.<br>
+            I received an invitation to apply for membership in the National Honor Society (NHS)<br>
+            and had the chance to tour the Area 31 Career Center, where I subsequently enrolled in the Emergency Medical Technician (EMT) program.
+        </p>
+
+        <p>
+            Completing my junior year seamlessly led into my senior year, which was characterized by both challenges and significant growth.<br>
+            Throughout my final year, I served as an active member of the National Honor Society<br>
+            while participating in a job-ready program at Area 31 Career Center,<br>
+            where I earned certifications in CPR and Emergency Dispatch.<br>
+            Being part of the EMT program and NHS allowed me to further develop my leadership, problem-solving, and community service skills,<br>
+            reinforcing my passion for teamwork and collaboration.
+        </p>
+
+        <p>
+            This journey has not only shaped my academic pursuits<br>
+            but has also instilled in me a strong commitment to making a positive impact in my community.
+        </p>
+    </div>
+    <div>
+        <div class="education-row">
+            <div class="col-5">
+                <img src="IvyTechmerch.jpeg" width="300px">
+
+            </div>
+            <div class="col-5">
+                <br>
+                <h5>College Journey</h5>
+                <br>
+                <img src="IvyTech.Indy.jpg" width="300px">   
+            </div>
+            <p>
+                Hi, my name is Zawadi.<br>
+                I am an IT student at Ivy Tech Community College, pursuing an Associate of Applied Science in Software Development.<br>
+                My journey reflects a deep commitment to aligning my passion for design and development with a successful career in technology.<br><br>
+
+                I have not yet had the opportunity to be part of a significant project that fully utilizes my skills;<br>
+                however, I am eager to contribute to initiatives that allow me to showcase my design and creative abilities.<br>
+                Although my experience in larger endeavors is limited, I have actively put my design and creative skills to the test independently,<br>
+                which has significantly contributed to my professional growth.<br>
+                This process has motivated me to apply the skills I have acquired in my coursework to real-world situations.<br>
+                I am enthusiastic about collaborating on projects that will further develop my capabilities and impact.
+            </p>
+        </div>
+        <a href="index.html" class="btn">Home &#8594</a>
 
     </div>
-
 
 
 <!----------footer------->
-    <div class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-4">
-                    <img src="AboutMeWhiteLogo.png" width="125px">
-                </div>
-                <div class="col-4">
-                    <h3>You're Amazing!</h3>
-                </div>
-                <div class="col-4">
+    <div class="footer-box">
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-4">
+                        <img src="AboutMeLogo.png" width="125px">
+                    </div>
+                    <div class="col-4">
+                        <h3>You're Amazing!</h3>
+                    </div>
+                    <div class="col-4">
                     <h3>Find Me Here</h3>
-                    <ul>
-                        <li>Linkden</li>
-
-                        <li>Instagram</li>
-                    </ul>
+                        <ul class="social-links">
+                            <li>
+                                <a href="https://instagram.com/c_ad_eau_/" target="_blank">
+                                    <i class="fab fa-instagram"></i> Instagram
+                                </a>
+                            </li>
+                             <li>
+                                <a href="https://linkedin.com/in/zawadi-esube" target="_blank">
+                                    <i class="fab fa-linkedin"></i> LinkedIn
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
+        </footer>
     </div>
-
-</body>
 </html>
